--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,3 +13,13 @@ a {
     text-decoration: none;
     color: black;
 }
+
+:root {
+  --body: #ffffff;
+  --text: #363636;
+  --text-light: #898989;
+  --primary: #1bbeff;
+  --border: #bbbbbb;
+  --padding: 16px 24px;
+  --line-height: 24px;
+}
