--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -19,4 +19,11 @@
     margin: 50px 0 50px 0;
 }
 
+.profilepic {
+    margin-right: 10px;
+    border-radius: 50%;
+    width: 35px !important;
+    height: 35px !important;
+}
+
 
