--- a/styles/SkillTest.module.css
+++ b/styles/SkillTest.module.css
@@ -39,7 +39,7 @@
     content: " ";
     z-index: -1;
     position: absolute;
-    clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
+    clip-path: polygon(0 0, 40% 0, 50% 100%, 0% 100%);
     background-position: top;
     background: url('/images/space.jpg');
     background-position: 20% 80%;
@@ -52,7 +52,7 @@
     content: " ";
     z-index: -1;
     position: absolute;
-    clip-path: polygon(0 0, 40% 0, 60% 100%, 0% 100%);
+    clip-path: polygon(0 0, 40% 0, 50% 100%, 0% 100%);
     background: url('/images/apuKoneella.jpeg') center no-repeat;
     background-position: 20% 80%;
     background-size: 350px 350px;
@@ -128,6 +128,8 @@
 }
 
 @media screen and (max-width: 768px) {
+    /* removes all background on mobile
+    because it is way nicer */
     .maincontent::before, .maincontent:hover::before  {
         clip-path: none;
         background: none;
